# toduo-rs

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_zh.md  RULES.md  Rust Todo.txt 计划文档.md  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
todo-core/: Cargo.toml
todo-core/src/: config.rs  error.rs  lib.rs  model.rs  service.rs
todo-gui/: .gitignore  README.md  README_zh.md  biome.json  eslint.config.js  index.html  package.json
todo-gui/src/: App.vue
todo-gui/src-tauri/: Cargo.toml  tauri.conf.json
todo-gui/src-tauri/capabilities/: default.json
todo-gui/src-tauri/icons/: icon.icns
todo-gui/src-tauri/src/: lib.rs  main.rs
todo-gui/src/components/: AddTaskModal.vue  DatePicker.vue  SettingsModal.vue  Sidebar.vue  SidebarNav.vue  TaskContextMenu.vue  TaskList.vue
todo-tui/: Cargo.toml  README.md  README_zh.md
todo-tui/src/: app.rs  main.rs  theme.rs  ui.rs
