[workspace]
members  = ["todo-core", "todo-tui", "todo-gui/src-tauri"]
resolver = "2"

[workspace.package]
version     = "0.1.2"
edition     = "2024"
authors     = ["Yousa-Mirage <Yousa-Mirage@foxmail.com>"]
description = "A dual-mode (GUI & TUI) task manager based on todo.txt"
license     = "MIT"
repository  = "https://github.com/Yousa-Mirage/ToDuo-rs"

[workspace.dependencies]
anyhow    = "1.0"
serde     = { version = "1.0", features = ["derive"] }
chrono    = { version = "0.4", features = ["serde"] }
todo-txt  = "4.1"
ratatui   = "0.30"
crossterm = "0.29"
dirs      = "6.0"

[workspace.lints.clippy]
unwrap_used   = "deny"
expect_used   = "deny"
panic         = "deny"
enum_glob_use = "deny"

[profile.release]
lto           = true
opt-level     = 3
panic         = "abort"
strip         = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug     = true
