[package]
name    = "todo-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace   = true
chrono.workspace   = true
dirs.workspace     = true
serde.workspace    = true
toml               = "0.9"
thiserror          = "2.0.17"
todo-txt.workspace = true

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
