[package]
name    = "todo-core"
edition = "2024"
version = { workspace = true }

[dependencies]
toml               = "0.9"
thiserror          = "2.0.17"
anyhow.workspace   = true
chrono.workspace   = true
dirs.workspace     = true
serde.workspace    = true
todo-txt.workspace = true

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
