[package]
name = "todo-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
dirs.workspace = true
ratatui.workspace = true
unicode-width = "0.2"
todo-core = { version = "0.1.0", path = "../todo-core" }

[lints]
workspace = true

[[bin]]
name = "td"
path = "src/main.rs"
