[package]
name    = "todo-tui"
edition = "2024"
version = { workspace = true }

[dependencies]
unicode-width       = "0.2"
anyhow.workspace    = true
chrono.workspace    = true
crossterm.workspace = true
dirs.workspace      = true
ratatui.workspace   = true
todo-core           = { path = "../todo-core" }

[lints]
workspace = true

[[bin]]
name = "td"
path = "src/main.rs"
