[package]
name    = "todo-gui"
edition = "2024"
version = { workspace = true }

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name       = "todo_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog          = "2"
tauri-plugin-opener          = "2"
tauri-plugin-global-shortcut = "2"
dirs.workspace               = true
serde.workspace              = true
todo-core                    = { path = "../../todo-core" }
tauri-plugin-autostart = "2.5.1"

[lints]
workspace = true

[[bin]]
name = "ToDuo"
path = "src/main.rs"
